Add dependency-free HTTP API
